# messenger

./: CMakeLists.txt  Readme.md
src/client/: client.c
src/server/: server.c
